--- a/eft_app_guide/Views/SettingWindow.xaml
+++ b/eft_app_guide/Views/SettingWindow.xaml
@@ -5,7 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:eft_app_guide.Views"
         mc:Ignorable="d"
-        Title="SettingWindow" Height="450" Width="800">
+        
+        Title="Settings"
+        Height="1080"
+        Width="1920">
+    
     <Grid>
         
     </Grid>
