--- a/eft_app_guide/App.xaml
+++ b/eft_app_guide/App.xaml
@@ -1,16 +1,9 @@
 ﻿<Application x:Class="eft_app_guide.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:eft_app_guide"
-             
-             xmlns:usercontrols="clr-namespace:eft_app_guide.Views.AsUserControls"
-             xmlns:viewmodels="clr-namespace:eft_app_guide.ViewModels.ToUserControls">
+             xmlns:local="clr-namespace:eft_app_guide">
     
     <Application.Resources>
-        
-        <DataTemplate DataType="{x:Type viewmodels:ItemManagementVM}">
-            <usercontrols:ItemManagement/>
-        </DataTemplate>
         
     </Application.Resources>
 </Application>
