--- a/eft_app_guide/Views/ResourceDictionaries/MenuResourceDictionary.xaml
+++ b/eft_app_guide/Views/ResourceDictionaries/MenuResourceDictionary.xaml
@@ -1,6 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <!--#region MENU_LIST-->
+    <Style TargetType="ListView" x:Key="MENU_ITEM">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
+        <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Disabled"/>
+    </Style>
+    <!--#endregion-->
+    
     <!--#region MENU_LIST_ITEM-->
     <Style TargetType="ListBoxItem" x:Key="MENU_LIST_ITEM">
         <Setter Property="IsTabStop" Value="False"/>
@@ -31,7 +40,7 @@
     <Style TargetType="Grid" x:Key="MENU_ITEM_CONTENT">
         <Setter Property="Height" Value="40"/>
         <Setter Property="Width" Value="40"/>
-        <Setter Property="Margin" Value="0,5"/>
+        <Setter Property="Margin" Value="5"/>
         <Setter Property="Background" Value="#00000000"/> <!-- OR #1A000000 -->
 
         <Setter Property="ItemsControl.ItemTemplate">
